package com.heima.designpatterns.pattern.proxy.cglib;

/** 火车站类，具有 sellTicket 功能
 * @author: DongShaowei
 * @created: 2025-05-25 17:30
 * @description:
 */
public class TrainStation {

    public void sell() {
        System.out.println("火车站卖票");
    }
}
